add the correct url for github pages

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loginpage",
   "version": "0.1.1",
-  "homepage": "http://gitname.github.io/react-gh-pages",
+  "homepage": "https://drete457.github.io/loginpageinreact/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
